JBTM-3482 Remove MaxPermSize and replace with MaxMetaspaceSize